<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.UniqueNewsFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="100dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_unique_views_textHolder1" />

        <Spinner
            android:id="@+id/spinner_url_to_fetch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="147dp"
                android:layout_height="wrap_content"
                android:text="@string/fragment_unique_views_textHolder2" />

            <Spinner
                android:id="@+id/spinner_number_of_news_to_show"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:id="@+id/button_grab_unique_news"
            android:layout_width="180dp"
            android:layout_height="38dp"
            android:layout_gravity="center|center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/fragment_unique_views_button" />

        <ListView
            android:id="@+id/list_view_unique_news"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</FrameLayout>